--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   path_provider: 2.0.15
   http: ^0.13.5
   store_redirect: 2.0.1
+  animate_do: ^3.0.2
   nb_utils: ^5.0.6
   flutter: 
     sdk: flutter
